--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,23 @@
 {
-  "name": "Mímica Pro",
-  "short_name": "Mímica",
-  "description": "Juego de mímicas divertido para toda la familia.",
-  "start_url": "./index.html",
-  "display": "standalone",
-  "background_color": "#0D6CA8",
-  "theme_color": "#0D6CA8",
-  "icons": [
-    {
-      "src": "assets/iconos/animales_leon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
-  ]
+    "name": "Mímica Pro",
+    "short_name": "Mímica",
+    "description": "Juego de mímicas divertido para toda la familia.",
+    "start_url": "./index.html",
+    "display": "standalone",
+    "background_color": "#0D6CA8",
+    "theme_color": "#0D6CA8",
+    "icons": [
+        {
+            "src": "assets/iconos/animales_leon.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "assets/iconos/animales_leon.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        }
+    ]
 }
